--- a/src/main/webapp/ticketlink/Pay/payment_p1.html
+++ b/src/main/webapp/ticketlink/Pay/payment_p1.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/assets/css/payment_p1.css">
+  <link rel="stylesheet" href="/Tcp2/assets/css/payment_p1.css">
   <!-- <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/panzoom/panzoom.umd.js"></script>
   <link
     rel="stylesheet"
@@ -38,10 +38,10 @@
 </head>
 <body>
   <header>
-    <img src="/assets/img/ticklink/종튼.png" alt="">
+    <img src="/Tcp2/assets/img/ticklink/종튼.png" alt="">
   </header>
   <div id="paystepup1">
-    <img src="/assets/img/ticklink/결제단계1.png" alt="">
+    <img src="/Tcp2/assets/img/ticklink/결제단계1.png" alt="">
   </div>
   <div id="main">
     <div>
