여러가지 수정, 로그인 페이지 로고 수정 등.

--- a/src/main/webapp/ticketlink/main.html
+++ b/src/main/webapp/ticketlink/main.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>티켓링크 -포트폴리오용</title>
-    <link rel="stylesheet" type="text/css" href="/assets/css/common.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="/assets/css/footer.css">
+    <title>티켓링크</title>
+    <link rel="stylesheet" type="text/css" href="../assets/css/common.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/footer.css">
     <script src="/assets/js/jquery-1.12.4.min.js"></script>
     <!-- 스와이퍼 스크립트 -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -63,7 +63,7 @@
                 </div> 
             </div>
             <div class="nav_box">
-                <div class="inner">
+                <div class="inner navbox">
                     <h1 class="logo"><a href="../html/main.html">로고</a></h1>
                     <ul class="nav">
                         <li><a href="#">공연/전시</a></li>
@@ -87,20 +87,20 @@
         <div id="app">
             <div class="main_swiper_box swiper mySwiper">
                 <div class="big_banner swiper-wrapper" id="big_banner">
-                    <div class="swiper-slide"><a href="#"><img src="/assets/img/ticklink/BigBanner_01.jpg" alt="메인이미지"></a></div>
+                    <div class="swiper-slide"><a href="#"><img src="../assets/img/ticklink/BigBanner_01.jpg" alt="메인이미지"></a></div>
                 </div>
                 <ul class="sm_box">
                     <li class="sm_img on">
-                        <a href="/assets/img/ticklink/BigBanner_01.jpg"><img src="/assets/img/ticklink/thumbnail_01.jpg" alt=""></a>
+                        <a href="/assets/img/ticklink/BigBanner_01.jpg"><img src="../assets/img/ticklink/thumbnail_01.jpg" alt=""></a>
                     </li>
                     <li class="sm_img">
-                        <a href="/assets/img/ticklink/BigBanner_02.jpg"><img src="/assets/img/ticklink/thumbnail_02.jpg" alt=""></a>
+                        <a href="/assets/img/ticklink/BigBanner_02.jpg"><img src="../assets/img/ticklink/thumbnail_02.jpg" alt=""></a>
                     </li>
                     <li class="sm_img">
-                        <a href="/assets/img/ticklink/BigBanner_01.jpg"><img src="/assets/img/ticklink/thumbnail_01.jpg" alt=""></a>
+                        <a href="/assets/img/ticklink/BigBanner_01.jpg"><img src="../assets/img/ticklink/thumbnail_01.jpg" alt=""></a>
                     </li>
                     <li class="sm_img">
-                        <a href="/assets/img/ticklink/BigBanner_02.jpg"><img src="/assets/img/ticklink/thumbnail_02.jpg" alt=""></a>
+                        <a href="/assets/img/ticklink/BigBanner_02.jpg"><img src="../assets/img/ticklink/thumbnail_02.jpg" alt=""></a>
                     </li>
                 </ul>   
             </div>
@@ -114,7 +114,7 @@
                         <li class="card_item">
                             <a href="#">
                                 <div class="img_box">
-                                    <img src="/assets/img/ticklink/cardnews_02.jpg" alt="">
+                                    <img src="../assets/img/ticklink/cardnews_02.jpg" alt="">
                                 </div>
                                 <div class="txt_box">
                                     <h4 class="item_tit">[단독판매] 어쩌다 발견한 하루</h4>
@@ -127,7 +127,7 @@
                         <li class="card_item">
                             <a href="#">
                                 <div class="img_box">
-                                    <img src="/assets/img/ticklink/cardnews_03.jpg" alt="">
+                                    <img src="../assets/img/ticklink/cardnews_03.jpg" alt="">
                                 </div>
                                 <div class="txt_box">
                                     <h4 class="item_tit">[단독판매] 어쩌다 발견한 하루</h4>
@@ -140,7 +140,7 @@
                         <li class="card_item">
                             <a href="#">
                                 <div class="img_box">
-                                    <img src="/assets/img/ticklink/cardnews_02.jpg" alt="">
+                                    <img src="../assets/img/ticklink/cardnews_02.jpg" alt="">
                                 </div>
                                 <div class="txt_box">
                                     <h4 class="item_tit">[단독판매] 어쩌다 발견한 하루</h4>
@@ -153,7 +153,7 @@
                         <li class="card_item">
                             <a href="#">
                                 <div class="img_box">
-                                    <img src="/assets/img/ticklink/cardnews_02.jpg" alt="">
+                                    <img src="../assets/img/ticklink/cardnews_02.jpg" alt="">
                                 </div>
                                 <div class="txt_box">
                                     <h4 class="item_tit">[단독판매] 어쩌다 발견한 하루</h4>
@@ -166,7 +166,7 @@
                         <li class="card_item">
                             <a href="#">
                                 <div class="img_box">
-                                    <img src="/assets/img/ticklink/cardnews_02.jpg" alt="">
+                                    <img src="../assets/img/ticklink/cardnews_02.jpg" alt="">
                                 </div>
                                 <div class="txt_box">
                                     <h4 class="item_tit">[단독판매] 어쩌다 발견한 하루</h4>
@@ -207,7 +207,7 @@
                             <li class="card_item_04">
                                 <a href="#">
                                     <div class="img_box">
-                                        <img src="/assets/img/ticklink/cardnews_02.jpg" alt="">
+                                        <img src="../assets/img/ticklink/cardnews_02.jpg" alt="">
                                     </div>
                                     <div class="txt_box">
                                         <h4 class="item_tit">뮤지컬 &lt;미오 프라텔로&gt;</h4>
@@ -221,7 +221,7 @@
                             <li class="card_item_04">
                                 <a href="#">
                                     <div class="img_box">
-                                        <img src="/assets/img/ticklink/cardnews_03.jpg" alt="">
+                                        <img src="../assets/img/ticklink/cardnews_03.jpg" alt="">
                                     </div>
                                     <div class="txt_box">
                                         <h4 class="item_tit">뮤지컬 &lt;협객자객&gt;</h4>
@@ -235,7 +235,7 @@
                             <li class="card_item_04">
                                 <a href="#">
                                     <div class="img_box">
-                                        <img src="/assets/img/ticklink/cardnews_02.jpg" alt="">
+                                        <img src="../assets/img/ticklink/cardnews_02.jpg" alt="">
                                     </div>
                                     <div class="txt_box">
                                         <h4 class="item_tit">뮤지컬 &lt;미오 프라텔로&gt;</h4>
@@ -249,7 +249,7 @@
                             <li class="card_item_04">
                                 <a href="#">
                                     <div class="img_box">
-                                        <img src="/assets/img/ticklink/cardnews_02.jpg" alt="">
+                                        <img src="../assets/img/ticklink/cardnews_02.jpg" alt="">
                                     </div>
                                     <div class="txt_box">
                                         <h4 class="item_tit">뮤지컬 &lt;미오 프라텔로&gt;</h4>
@@ -263,7 +263,7 @@
                             <li class="card_item_04">
                                 <a href="#">
                                     <div class="img_box">
-                                        <img src="/assets/img/ticklink/cardnews_03.jpg" alt="">
+                                        <img src="../assets/img/ticklink/cardnews_03.jpg" alt="">
                                     </div>
                                     <div class="txt_box">
                                         <h4 class="item_tit">뮤지컬 &lt;협객자객&gt;</h4>
@@ -277,7 +277,7 @@
                             <li class="card_item_04">
                                 <a href="#">
                                     <div class="img_box">
-                                        <img src="/assets/img/ticklink/cardnews_02.jpg" alt="">
+                                        <img src="../assets/img/ticklink/cardnews_02.jpg" alt="">
                                     </div>
                                     <div class="txt_box">
                                         <h4 class="item_tit">뮤지컬 &lt;미오 프라텔로&gt;</h4>
@@ -291,7 +291,7 @@
                             <li class="card_item_04">
                                 <a href="#">
                                     <div class="img_box">
-                                        <img src="/assets/img/ticklink/cardnews_03.jpg" alt="">
+                                        <img src="../assets/img/ticklink/cardnews_03.jpg" alt="">
                                     </div>
                                     <div class="txt_box">
                                         <h4 class="item_tit">뮤지컬 &lt;협객자객&gt;</h4>
@@ -305,7 +305,7 @@
                             <li class="card_item_04">
                                 <a href="#">
                                     <div class="img_box">
-                                        <img src="/assets/img/ticklink/cardnews_02.jpg" alt="">
+                                        <img src="../assets/img/ticklink/cardnews_02.jpg" alt="">
                                     </div>
                                     <div class="txt_box">
                                         <h4 class="item_tit">뮤지컬 &lt;미오 프라텔로&gt;</h4>
@@ -319,7 +319,7 @@
                             <li class="card_item_04">
                                 <a href="#">
                                     <div class="img_box">
-                                        <img src="/assets/img/ticklink/cardnews_03.jpg" alt="">
+                                        <img src="../assets/img/ticklink/cardnews_03.jpg" alt="">
                                     </div>
                                     <div class="txt_box">
                                         <h4 class="item_tit">뮤지컬 &lt;협객자객&gt;</h4>
@@ -333,7 +333,7 @@
                             <li class="card_item_04">
                                 <a href="#">
                                     <div class="img_box">
-                                        <img src="/assets/img/ticklink/cardnews_02.jpg" alt="">
+                                        <img src="../assets/img/ticklink/cardnews_02.jpg" alt="">
                                     </div>
                                     <div class="txt_box">
                                         <h4 class="item_tit">뮤지컬 &lt;미오 프라텔로&gt;</h4>
@@ -347,7 +347,7 @@
                             <li class="card_item_04">
                                 <a href="#">
                                     <div class="img_box">
-                                        <img src="/assets/img/ticklink/cardnews_03.jpg" alt="">
+                                        <img src="../assets/img/ticklink/cardnews_03.jpg" alt="">
                                     </div>
                                     <div class="txt_box">
                                         <h4 class="item_tit">뮤지컬 &lt;협객자객&gt;</h4>
@@ -361,7 +361,7 @@
                             <li class="card_item_04">
                                 <a href="#">
                                     <div class="img_box">
-                                        <img src="/assets/img/ticklink/cardnews_02.jpg" alt="">
+                                        <img src="../assets/img/ticklink/cardnews_02.jpg" alt="">
                                     </div>
                                     <div class="txt_box">
                                         <h4 class="item_tit">뮤지컬 &lt;유진과 유진&gt;</h4>
