--- a/src/main/webapp/ticketlink/Pay/prepare.html
+++ b/src/main/webapp/ticketlink/Pay/prepare.html
@@ -18,6 +18,6 @@
   </style>
 </head>
 <body>
-  <button onclick="window.close()">준비중입니다 <br/>클릭!!</button>
+  <button onclick="window.close()">결제가 완료되었습니다.!! <br/>클릭!!</button>
 </body>
 </html>
