업로드오류난거수정

--- a/src/main/webapp/ticketlink/Pay/NewFile.html
+++ b/src/main/webapp/ticketlink/Pay/NewFile.html
@@ -7,9 +7,9 @@
     <script>
         function openServletWindow() {
             // 서블릿 URL
-            const url = "/Payment_p0";
+            const url = "/Tcp2/Payment_p0?pi=1251";
             // 새 창 열기
-            window.open(url, "PaymentWindow", "width=800,height=600,scrollbars=yes");
+            window.open(url, "PaymentWindow", "width=1010,height=800,scrollbars=yes");
         }
     </script>
 </head>
