종원이페이지 공사 끝

--- a/src/main/webapp/ticketlink/inquire/inquire_success.html
+++ b/src/main/webapp/ticketlink/inquire/inquire_success.html
@@ -47,7 +47,7 @@
   <div class="container">
     <div>문의 접수가 완료되었습니다.</div>
     <div>회원님의 문의에 최대한 빠르고 정확한 답변을 드리기 위해 노력하겠습니다. 감사합니다.</div>
-    <div class="buttondiv"><button class="btn" onclick="location.href='/Tcp2/ShowInquiryList'">문의내역</button></div>
+    <div class="buttondiv"><button class="btn" onclick="location.href='/Tcp2/Controller?command=inquirelist'">문의내역</button></div>
   </div>
 </body>
 </html>
